<resources>

    <string name="app_name">SchoolFriend</string>
    <string name="auth_progress_dialog_title">学信网授权</string>
    <string name="auth_progress_dialog_content">正在授权...</string>
    <string name="auth_username_empty_tip">用户名不能为空</string>
    <string name="auth_password_empty_tip">密码不能为空</string>
    <string name="auth_username_pass_empty_tip">用户名或密码不能为空</string>
    <string name="auth_username_pass_error_tip">用户名或密码错误</string>
    <string name="username">USERNAME</string>
    <string name="visitor">访客</string>
    <string name="shared_file_name">schoolFriend</string>
    <string name="auth">授权</string>
    <string name="title_activity_sdcard_images">SDCardImagesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_idea">这一刻的想法...</string>
    <string name="publish_recommend_work">输入招聘信息...</string>
    <string name="location">所在位置</string>
    <string name="wh0_scan">谁可以看</string>
    <string name="anyone_scan">公开</string>
    <string name="reminder_who_scan">提醒谁看</string>
    <string name="title_activity_publish_weibo">PublishWeiboActivity</string>
    <string name="title_activity_user_loaction">所在位置</string>
    <string name="no_display_location">不显示位置</string>
    <string name="title_activity_school_friend">校友圈</string>
    <string name="comment">评论</string>
    <string name="send">发送</string>
    <string name="title_activity_choose_images">图片</string>
    <string name="finish">完成</string>
    <string name="review">预览</string>
    <string name="picture_choose_reminder">你最多能选择9张图片</string>
    <string name="camera">拍摄照片</string>
    <string name="title_activity_publish_text">发表文字</string>
    <string name="empty" />
    <string name="cancle">取消</string>
    <string name="exit">退出</string>
    <string name="exit_this_edit">退出此次编辑？</string>
    <string name="title_activity_zoom_image">ZoomImageActivity</string>
    <string name="title_activity_choose">图片</string>
    <string name="choose">选择</string>
    <string name="choosedReview">被选择图片预览</string>
    <string name="chooseReview">图片预览</string>
    <string name="title_activity_publish_text_with_pics">PublishTextWithPicsActivity</string>
    <string name="IMGS">uploadImage</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="who_scan">谁可以看</string>
    <string name="school_scan">校友可见</string>
    <string name="a_public">公开</string>
    <string name="school_friend_scan">校友可见</string>
    <string name="edit_label">编辑标签</string>
    <string name="xue_xin_auth">学信网授权</string>
    <string name="alumn_circle">校友圈</string>
    <string name="publish_text">发表文字</string>
    <string name="picture">图片</string>
    <string name="user_loaction">所在位置</string>
    <string-array name="who_scan_group">
        <item>公开</item>
        <item>私密</item>
        <item>部分可见</item>
    </string-array>

    <string-array name="who_san_small_group">
        <item>所有校友可见</item>
        <item>仅自己可见</item>
        <item>选中的校友可见</item>
    </string-array>
    <string-array name="only_people_see">
        <item>同届同一学院可见</item>
        <item>本学院其他届可见</item>
        <item>其他届其他学院可见</item>
        <item>本届其他学院可见</item>
    </string-array>
    <string name="title_activity_base">BaseActivity</string>
    <string name="praise">点赞</string>
    <string name="alumn_dynamic">校友动态</string>
    <string name="recrict">院最新招聘</string>
    <string name="my_tucao">我要吐槽</string>
    <string name="xuezhang_heat_voice">学长心声</string>
    <string name="others_school">其他高校</string>
    <string name="do_task">做任务</string>
    <string name="hot_dynamic">热门动态</string>
    <string name="food">食堂</string>
    <string name="teacher">老师</string>
    <string name="student">学生</string>
    <string name="she_tuan">社团</string>
    <string name="more">更多</string>
    <string name="tu_cao">吐槽</string>
    <string name="title_activity_no_action_bar">NoActionBarActivity</string>
    <string name="capture_image">capture_image</string>
    <string name="width">width</string>
    <string name="diviceWidth">diviceWidth</string>
    <string name="diviceHeight">diviceHeight</string>
    <string name="visiDiviceHeight">visiDiviceHeight</string>
    <string name="captcha">输入验证码</string>
    <string name="user_name">姓名</string>
    <string name="sex">性别</string>
    <string name="major">专业</string>
    <string name="start_date">入学日期</string>
    <string name="school">school</string>
    <string name="xueyuan">xueyuan</string>
    <string name="size">size</string>
    <string name="editor_label">编辑标签</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="uploading">正在上传</string>
    <string name="allPicsReview">all_pics_review</string>
    <string name="most_choose_nine_pics">最多选择9张图片</string>
    <string name="reminder">提示</string>
    <string name="are_you_sure_delete_this_pic">要删除这张照片吗</string>
    <string name="sure">确定</string>
    <string name="are_you_sure_exit_this_eidt">确定要退出此次编辑</string>
    <string name="recommend_work">推荐工作</string>
    <string name="work">工作</string>
    <string name="learing">学习</string>
    <string name="find_job">求职</string>
    <string name="shixi">实习</string>
    <string name="my_question">我要提问</string>
    <string name="work_recrict">推荐工作</string>
    <string name="xiaozhao">校招</string>
    <string name="shezhao">社招</string>
    <string name="yingping">应聘</string>
    <string name="zixun">咨询</string>
    <string name="collect">收藏</string>
    <string name="level">level</string>
    <string name="all">所有</string>
    <string name="undergraduate">本科</string>
    <string name="undergraduateCollege">本科学院</string>
    <string name="collect_ok">收藏成功</string>
    <string name="praise_ok">点赞成功</string>
    <string name="title_activity_recommend_work">RecommendWorkActivity</string>
    <string name="major_ask">专业咨询</string>
    <string name="own_major_ask">本专业问题</string>
    <string name="asked_by">asked by</string>
    <string name="person_center">个人中心</string>
    <string name="my_circle">我的圈</string>
    <string name="setting">设置</string>
    <string name="my_dynamic">我的动态</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_heart">我的心声</string>
    <string name="my_ask">我的咨询</string>
    <string name="publsh_ask">发布咨询</string>
    <string name="publish_recommend">发布推荐工作</string>
    <string name="my_recommend">我的推荐</string>
    <string name="function_desc">功能介绍</string>
    <string name="sys_notice">系统通知</string>
    <string name="help_fellback">帮助与反馈</string>
    <string name="jubao_tousu">举报与投诉</string>
    <string name="check_new_version">检查新版本</string>
    <string name="clean_storage">清理存储空间</string>
    <string name="exit_alumni">退出校友圈</string>
    <string name="jian_li_to_email">请输入简历投递邮箱</string>
    <string name="publish">发布</string>
    <string name="zhaoping_title">输入招聘标题</string>
    <string name="ask_title">请输入咨询标题</string>
    <string name="ask_desc">请输入咨询描述</string>
    <string name="content">content</string>
    <string name="title">title</string>
    <string name="publish_voice">发布心声</string>
    <string name="publish_dynamic">发布动态</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_content">请输入内容</string>
    <string name="delete">删除</string>
    <string name="replay">回复</string>
    <string name="close">关闭</string>
    <string name="collect_with">收藏与</string>
    <string name="fail_info_tip">更新失败，请稍后再试</string>
    <string name="chooseType">选择类型</string>
    <string name="tuijian">推荐</string>
    <string name="loading">正在加载中...</string>
    <string name="alumni_heart">学长心声</string>
    <string name="recommend">Recommend By</string>
    <string name="jian_li_post_to">简历投递到:</string>
    <string name="hot_comment">热门评论</string>
    <string name="new_comment">最新评论</string>
    <string name="comment_str">评论</string>
    <string name="praise_str">点赞</string>
    <string name="replay_str">回复</string>
    <string name="new_praise">最新点赞</string>
    <string name="comment_ok">评论成功</string>
    <string name="authorId">authorId</string>
    <string name="you_have_praised">你已经点赞过,不能重复点赞</string>
    <string name="network_connect_unavaible">网络连接不可用</string>
    <string name="recommend_str">推荐</string>
    <string name="hear_str">心声</string>
    <string name="ask_str">咨询</string>
    <string name="dynamic_str">动态</string>
    <string name="sync_to">同步到</string>
    <string name="graudate">本科学校</string>
    <string name="master">硕士学校</string>
    <string name="doctor">博士学校</string>
    <string name="voice_type">心声类型</string>
    <string name="ask_label">专业标签</string>
    <string name="search">搜索</string>
    <string name="input_key_search">输入关键字进行搜索</string>
    <string name="changePhotoPage">更换相册封面</string>
    <string name="share">分享</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="click_step_finish_register">点击完成注册</string>
    <string name="register">注册</string>
    <string name="alumni_register">校友圈注册</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_re_input_password">请再次输入密码</string>
    <string name="filed_not_empty">字段不能为空</string>
    <string name="twice_pass_diff">两次输入的密码不一致</string>
    <string name="register_ok">注册成功</string>
    <string name="choose_reason">选择原因</string>
    <string name="complain_need_learn">投诉须知</string>
    <string name="please_complain_reason">请选择投诉原因</string>
    <string name="detail_info">详细信息</string>
    <string name="complain">投诉</string>
    <string name="commit">提交</string>
    <string name="login">登录</string>
    <string name="authorization">授权</string>
    <string name="head">头像</string>
    <string name="head_url">head_url</string>
    <string name="replace_img">替换图片</string>
    <string name="use">使用</string>
    <string name="update_head">update_head</string>
    <string name="update_bg">update_bg</string>
    <string name="update_ok">更新成功</string>
    <string name="login_error">登录失败</string>
    <string name="logining">正在登录...</string>
    <string name="registering">正在注册...</string>
    <string name="xuexin_title">中国高等教育学生信息网</string>
    <string name="xuexin_detail">教育部制定的唯一学历查询网站</string>
    <string name="congruation_ok_click_continue">授权成功,点击使用</string>
    <string name="degree_info">学位信息</string>
    <string name="is_authorization">isAuthorization</string>
    <string name="noToken">noToken</string>
    <string name="hasToken">hasToken</string>
    <string name="tip">提示</string>
    <string name="sure_exit_alumnus_group">确定退出校友圈</string>
    <string name="person_info">person_info</string>
    <string name="head_url_filename">head_url_filename</string>
    <string name="file_save_to">文件保存到</string>
    <string name="complain_finish_wait_consume">投诉完成,等待处理</string>
    <string name="current_no_current">暂无任何评论</string>
    <string name="delete_failure">删除失败</string>
    <string name="delete_ok">删除成功</string>
    <string name="collect_faiure">收藏失败</string>
    <string name="you_have_collected">你已经收藏过</string>
    <string name="bg_url">bgUrl</string>
    <string name="current_no_info">暂无任何信息</string>
    <string name="question_solved">问题已被解决</string>
    <string name="question_no_solved">问题没被解决</string>

</resources>
