<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alumni_circle"
            android:icon="@drawable/ic_forum"
            android:title="@string/alumn_dynamic" />

        <item
            android:id="@+id/nav_tucao"
            android:icon="@drawable/ic_event"
            android:title="@string/major_ask" />

        <item
            android:id="@+id/nav_heat_voice"
            android:icon="@drawable/ic_headset"
            android:title="@string/xuezhang_heat_voice" />

        <item
            android:id="@+id/nav_recrict"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/work_recrict" />

    </group>

    <item android:title="@string/person_center">
        <menu>
            <item
                android:id="@+id/my_circle"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/my_circle" />
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_forum"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
