<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/sync_choose_layout"
    android:visibility="gone"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/phone_apadding"
        android:layout_marginTop="@dimen/phone_apadding"
        android:layout_marginBottom="@dimen/phone_apadding"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sync_to"
        android:id="@+id/textView40"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/phone_apadding"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor"
            android:visibility="gone"
            android:checked="true"
            android:id="@+id/doctor_cb" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master"
            android:visibility="gone"
            android:checked="true"
            android:id="@+id/master_cb" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/graudate"
            android:id="@+id/graduate_cb" />
    </LinearLayout>
</LinearLayout>