<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padding_left"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tipTV" />

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="15"
                android:hint="@string/please_input_username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="15"
                android:hint="@string/please_input_password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etSurePassword"
                android:layout_width="wrap_content"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="15"
                android:hint="@string/please_re_input_password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/register"
            android:layout_marginTop="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@drawable/primary_bn_bg"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:elevation="2dp"
            android:id="@+id/register"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>
